--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,4 +36,4 @@ jobs:
 
       - name: Deploy only public/ folder to server
         run: |
-          rsync -avz --delete -e "ssh -i ~/.ssh/id_ed25519" ./public/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/var/www/html/
+          rsync -avz --delete --no-times -e "ssh -i ~/.ssh/id_ed25519" ./public/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/var/www/html/
