--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,7 @@
 name: PHP CI/CD
 
 on:
-  push:
-    branches: [ "main" ]
+  workflow_dispatch:  # ⬅️ Manual trigger only
 
 jobs:
   php-lint:
@@ -36,4 +35,6 @@ jobs:
 
       - name: Deploy only public/ folder to server
         run: |
-          rsync -avz --delete --no-perms --no-owner --no-group --no-times -e "ssh -i ~/.ssh/id_ed25519" ./public/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/var/www/html/
+          rsync -avz --delete --no-perms --no-owner --no-group --no-times \
+            -e "ssh -i ~/.ssh/id_ed25519" \
+            ./public/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/var/www/html/
