--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,8 +2,8 @@ name: PHP CI/CD
 
 on:
   push:
-    branches: [ "main" ]         # Auto-run tests on push
-  workflow_dispatch:              # Enable manual trigger for deploy
+    branches: [ "main" ]
+  workflow_dispatch:              # Allow manual trigger (for deploy)
 
 jobs:
   php-lint:
@@ -21,7 +21,8 @@ jobs:
         run: find public -name "*.php" -exec php -l {} \;
 
   deploy:
-    if: github.event_name == 'workflow_dispatch'  # ⬅️ Only run on manual trigger
+    if: github.event_name == 'workflow_dispatch'  # Only run deploy when manually triggered
+    needs: php-lint                                # Wait for lint to succeed first
     runs-on: ubuntu-latest
 
     steps:
